<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_ffffff"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        app:layout_constraintGuide_percent="0.5"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <!--用户名-->
    <EditText
        android:textSize="@dimen/name_et_size"
        app:layout_constraintBottom_toTopOf="@+id/password_et"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_et_backgrund"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:hint="@string/login_name_hint"
        android:id="@+id/name_et"
        android:layout_height="48dp"
        android:layout_width="match_parent"/>

    <!--密码-->

    <EditText
        android:textSize="@dimen/name_et_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:background="@drawable/login_et_backgrund"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:hint="@string/login_password_hint"
        android:id="@+id/password_et"
        android:layout_height="48dp"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/login_tv"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password_et"
        android:textSize="@dimen/login_tv_size"
        android:textColor="@color/color_ffffff"
        android:text="@string/login"
        android:background="@drawable/login_tv_backgrund"
        android:gravity="center"
        android:layout_height="48dp"
        android:layout_width="match_parent"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/login_tv"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/register"
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/login_tv"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/reset_password"
        android:id="@+id/reset_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>
