<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@color/colorPrimaryDark"
        android:layout_height="52dp"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/back_action"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back_selector"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:text="重置密码"
            android:textColor="@color/color_ffffff"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <android.support.constraint.Guideline
        app:layout_constraintGuide_percent="0.5"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <!--用户名-->
    <EditText
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/name_et_size"
        app:layout_constraintBottom_toTopOf="@+id/password_et"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_et_backgrund"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:hint="@string/login_name_hint"
        android:id="@+id/name_et"
        android:layout_height="48dp"
        android:layout_width="match_parent"/>

    <!--密码-->

    <EditText
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/name_et_size"
        app:layout_constraintBottom_toTopOf="@+id/new_password_et"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:background="@drawable/login_et_backgrund"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:hint="@string/login_password_hint"
        android:id="@+id/password_et"
        android:layout_height="48dp"
        android:layout_width="match_parent"/>

    <!--新密码-->

    <EditText
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/name_et_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_marginBottom="5dp"
        android:inputType="textPassword"
        android:background="@drawable/login_et_backgrund"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:hint="@string/new_password_hint"
        android:id="@+id/new_password_et"
        android:layout_height="48dp"
        android:layout_width="match_parent"/>

    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/login_tv"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/new_password_et"
        android:textSize="@dimen/login_tv_size"
        android:textColor="@color/color_ffffff"
        android:text="@string/reset_password"
        android:background="@drawable/login_tv_backgrund"
        android:gravity="center"
        android:layout_height="48dp"
        android:layout_width="match_parent"/>


</android.support.constraint.ConstraintLayout>
